[gd_scene load_steps=5 format=3 uid="uid://cfaao4lptpkqr"]

[ext_resource type="Script" uid="uid://oj8pfwlr6vru" path="res://Components/documents_info_menu.gd" id="1_spi0t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nfg38"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.75, 0.75, 0.75, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_spi0t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ybf0"]

[node name="DocumentsInfoMenu" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_nfg38")
script = ExtResource("1_spi0t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_spi0t")
text = "Title of Document"

[node name="ProgressLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_2ybf0")
text = "XX%"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ReviewButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Review"

[node name="ReadButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
text = "Read"

[node name="EditButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Edit"

[node name="PathLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.15, 0.15, 0.15, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_2ybf0")
text = "/path/to/document.tres"
text_overrun_behavior = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ReviewButton" to="." method="_on_review_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ReadButton" to="." method="_on_read_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/EditButton" to="." method="_on_edit_button_pressed"]
